<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="mtrl_picker_confirm" tools:override="true">OK</string>
    <string name="cache">Cache</string>
    <string name="detail">Details</string>
    <string name="search">Search</string>
    <string name="helpers">Useful apps</string>
    <string name="about">About c:geo</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="latlongitude">Latitude\nLongitude</string>
    <string name="settings_titlebar">c:geo Settings</string>
    <string name="all_types">All Cache Types</string>
    <string name="traditional">Traditional Cache</string>
    <string name="multi">Multi-cache</string>
    <string name="mystery">Mystery Cache</string>
    <string name="letterbox">Letterbox Hybrid</string>
    <string name="event">Event Cache</string>
    <string name="mega">Mega-Event Cache</string>
    <string name="giga">Giga-Event Cache</string>
    <string name="earth">Earthcache</string>
    <string name="cito">Cache In Trash Out Event</string>
    <string name="webcam">Webcam Cache</string>
    <string name="virtual">Virtual Cache</string>
    <string name="wherigo">Wherigo Cache</string>
    <string name="communceleb">Community Celebration Event</string>
    <string name="ape">Project APE Cache</string>
    <string name="gchq">Geocaching HQ</string>
    <string name="gchqceleb">Geocaching HQ Celebration</string>
    <string name="gps">GPS Adventures Exhibit</string>
    <string name="block">Geocaching HQ Block Party</string>
    <string name="locationless">Locationless (Reverse) Cache</string>
    <string name="advlab">Adventure Lab Cache</string>
    <string name="userdefined">User defined cache</string>
    <string name="unknown">Unknown Type</string>
    <string name="all_types_short">All</string>
    <string name="traditional_short">Trad</string>
    <string name="multi_short">Multi</string>
    <string name="mystery_short">Mystery</string>
    <string name="letterbox_short">Letterbox</string>
    <string name="event_short">Event</string>
    <string name="mega_short">Mega</string>
    <string name="giga_short">Giga</string>
    <string name="earth_short">Earth</string>
    <string name="cito_short">CITO</string>
    <string name="webcam_short">Webcam</string>
    <string name="virtual_short">Virtual</string>
    <string name="wherigo_short">Wherigo</string>
    <string name="communceleb_short">Community</string>
    <string name="ape_short">APE</string>
    <string name="gchq_short">GC HQ</string>
    <string name="gchqceleb_short">GC HQ Cel</string>
    <string name="gps_short">GPS Exhibit</string>
    <string name="block_short">GCHQ Block</string>
    <string name="locationless_short">Locationless</string>
    <string name="advlab_short">Adv Lab</string>
    <string name="userdefined_short">Userdefined</string>
    <string name="unknown_short">Unknown</string>
    <string name="cache_size_micro">Micro</string>
    <string name="cache_size_small">Small</string>
    <string name="cache_size_regular">Regular</string>
    <string name="cache_size_large">Large</string>
    <string name="cache_size_other">Other</string>
    <string name="cache_size_virtual">Virtual</string>
    <string name="cache_size_notchosen">Not chosen</string>
    <string name="cache_size_unknown">Unknown</string>
    <string name="cache_size_nano">Nano</string>
    <string name="cache_size_very_large">Very large</string>
    <string name="wp_final">Final Location</string>
    <string name="wp_stage">Stage of a Multicache</string>
    <string name="wp_puzzle">Question to Answer</string>
    <string name="wp_pkg">Parking Area</string>
    <string name="wp_trailhead">Trailhead</string>
    <string name="wp_waypoint">Reference Point</string>
    <string name="wp_original">Original Coordinates</string>
    <string name="wpnew_final">Final</string>
    <string name="wpnew_stage">Stage</string>
    <string name="wpnew_pkg">Parking</string>
    <string name="wpnew_trailhead">Via</string>
    <string name="wpnew_waypoint">Marker</string>
    <string name="wpnew_original">Original</string>
    <string name="log_found">Found it</string>
    <string name="log_dnf">Didn\'t find it</string>
    <string name="log_note">Write note</string>
    <string name="log_published">Published</string>
    <string name="log_enabled">Enabled</string>
    <string name="log_disabled">Disabled</string>
    <string name="log_attend">Will Attend</string>
    <string name="log_attended">Attended</string>
    <string name="log_retrieved">Retrieved</string>
    <string name="log_placed">Placed</string>
    <string name="log_grabbed">Grabbed Somewhere</string>
    <string name="log_movecollection">Move to Collection</string>
    <string name="log_moveinventory">Move to Inventory</string>
    <string name="log_maintained">Maintenance Performed</string>
    <string name="log_maintenance_needed">Needs Maintenance</string>
    <string name="log_update">Updated Coordinates</string>
    <string name="log_archived">Archived</string>
    <string name="log_unarchived">Unarchived</string>
    <string name="log_needs_archived">Needs Archived</string>
    <string name="log_discovered">Discovered</string>
    <string name="log_reviewer">Review Note</string>
    <string name="log_submit_for_review">Submit for Review</string>
    <string name="log_retractlisting">Retract Listing</string>
    <string name="log_marked_missing">Marked Missing</string>
    <string name="log_tb_nothing">Do Nothing</string>
    <string name="log_tb_visit">Visited</string>
    <string name="log_tb_drop">Dropped Off</string>
    <string name="log_tb_sortby">Sort Trackable</string>
    <string name="log_tb_changeall">Change All</string>
    <string name="log_tb_grabbed">Grabbed Somewhere</string>
    <string name="log_tb_note">Note</string>
    <string name="log_tb_discovered">Discovered</string>
    <string name="log_tb_archived">Archived</string>
    <string name="log_save">Save offline</string>
    <string name="log_saving">Sending log…</string>
    <string name="menu_centerposition">Center on my position</string>
    <string name="menu_about">About c:geo</string>
    <string name="menu_helpers">Utility programs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_backup">Backup / restore</string>
    <string name="menu_update">Update offline data</string>
    <string name="menu_update_routingdata">Routing data</string>
    <string name="menu_update_mapdata">Map data</string>
    <string name="menu_history">History</string>
    <string name="menu_history_longstring">Finds history</string>
    <string name="menu_lists_pocket_queries">Pocket queries</string>
    <string name="menu_lists_bookmarklists">Bookmark lists</string>
    <string name="any_button">Go to</string>
    <string name="debug_user_error_report_title">Report a problem</string>
    <string name="settings_title_services">Services</string>
    <string name="settings_summary_services">Configure user account information and access to optional services.</string>
    <string name="settings_title_appearance">Appearance</string>
    <string name="settings_summary_appearance">Configure distance units, language and app colors.</string>
    <string name="settings_title_cachedetails">Cache Details</string>
    <string name="settings_summary_cachedetails">Customize the display of cache information.</string>
    <string name="settings_title_offlinedata">Offline Data</string>
    <string name="settings_summary_offlinedata">Configure the data to be saved for offline use, the storage location and folders for GPX files.</string>
    <string name="settings_title_logging">Logging</string>
    <string name="settings_summary_logging">Configure your signature and set logging options.</string>
    <string name="settings_title_map">Map</string>
    <string name="settings_summary_map">Set map source, offline map settings and map details.</string>
    <string name="settings_title_navigation">Routing / Navigation</string>
    <string name="settings_summary_navigation">Configure offline routing, choose preferred navigation methods and select external navigation apps.</string>
    <string name="settings_title_system">System</string>
    <string name="settings_summary_system">System specific settings and debugging options.</string>
    <string name="settings_title_backup">Backup / Restore</string>
    <string name="settings_summary_backup">Perform backup and restore of cache/waypoint data and program settings.</string>
    <string name="cache_offline_refresh">Refresh</string>
    <string name="cache_offline_drop">Remove from list</string>
    <string name="cache_offline_store">Store</string>
    <string name="cache_personal_note">Personal note</string>
    <string name="cache_menu_preventWaypointsFromNote">Prevent waypoints from note</string>
    <string name="cache_hint">Hint</string>
    <string name="cache_menu_navigate">Navigate</string>
    <string name="cache_menu_browser">Open in browser</string>
    <string name="cache_menu_visit">Log Visit</string>
    <string name="cache_menu_visit_offline">Quick offline log</string>
    <string name="cache_menu_around">Caches around</string>
    <string name="cache_menu_event">Add to calendar</string>
    <string name="cache_menu_extract_waypoints">Extract waypoints</string>
    <string name="cache_menu_details">Details</string>
    <string name="cache_menu_refresh">Refresh</string>
    <string name="cache_menu_share">Share cache</string>
    <string name="cache_menu_move_list">Move to different list</string>
    <string name="cache_menu_vote">Vote</string>
    <string name="cache_menu_checker">Open Geochecker</string>
    <string name="cache_menu_challenge_checker">Search challenge checker</string>
    <string name="cache_menu_ignore">Ignore cache</string>
    <string name="waypoint_edit">Edit</string>
    <string name="waypoint_delete">Delete</string>
    <string name="waypoint_reset_cache_coords">Reset cache coordinates</string>
    <string name="waypoint_duplicate">Duplicate waypoint</string>
    <string name="map_view_map">Map view</string>
    <string name="map_rotation">Map rotation</string>
    <string name="map_theme_select">Select map theme</string>
    <string name="map_theme_options">Theme Options</string>
    <string name="map_language">Map language</string>
    <string name="map_live_disable">Disable live</string>
    <string name="map_as_list">Show as list</string>
    <string name="search_filter">Filter</string>
    <string name="compass_title">Compass</string>
    <string name="export">Export</string>
    <string name="export_fieldnotes">Field Notes</string>
    <string name="export_persnotes">Personal notes</string>
    <string name="tts_toggle">Toggle talking</string>
    <string name="map_sort_individual_route">Sort individual route</string>
    <string name="map_export_individual_route">Export individual route</string>
    <string name="map_load_individual_route">Load individual route</string>
    <string name="map_autotarget_individual_route">Set route start as target</string>
    <string name="map_clear_manual_targets">Clear manual targets</string>
    <string name="map_clear_individual_route">Clear individual route</string>
    <string name="switch_off">Off</string>
    <string name="switch_manual">Manual</string>
    <string name="downloadmap_title">Download offline map</string>
    <string name="check_tiles_menu">Check for missing routing data</string>
    <string name="map_clear_trailhistory">Clear history track</string>
    <string name="map_trail_show">Show history track</string>
    <string name="map_trail_hide">Hide history track</string>
    <string name="trailhistory">History track</string>
    <string name="export_trailhistory_title">Export history track</string>
    <string name="wizard">Configuration wizard</string>
</resources>