<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_default_navigation"
        android:icon="@drawable/ic_menu_compass"
        android:title="@string/cache_menu_navigate"
        app:actionProviderClass="cgeo.geocaching.ui.NavigationActionProvider"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/menu_navigate"
        android:icon="@drawable/ic_menu_goto"
        android:title="@string/cache_menu_navigate"
        app:actionProviderClass="cgeo.geocaching.apps.navi.NavigationSelectionActionProvider"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_log_visit_offline"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/cache_menu_visit_offline"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_log_visit"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/cache_menu_visit"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_tts_toggle"
        android:icon="@drawable/ic_menu_start_conversation"
        android:title="@string/tts_toggle"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_calendar"
        android:icon="@drawable/ic_menu_my_calendar"
        android:title="@string/cache_menu_event"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_caches_around"
        android:icon="@drawable/ic_menu_rotate"
        android:title="@string/cache_menu_around"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_show_in_browser"
        android:icon="@drawable/ic_menu_info_details"
        android:title="@string/cache_menu_browser"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_store_in_list"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/cache_offline_store"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/cache_offline_refresh"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/cache_offline_drop"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_gcvote"
        android:title="@string/cache_menu_vote"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/cache_menu_share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_checker"
        android:title="@string/cache_menu_checker"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_challenge_checker"
        android:title="@string/cache_menu_challenge_checker"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_ignore"
        android:title="@string/cache_menu_ignore"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_extract_waypoints"
        android:title="@string/cache_menu_extract_waypoints"
        app:showAsAction="ifRoom"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menu_export"
        android:title="@string/export"
        app:showAsAction="never|withText"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/menu_export_gpx"
                android:title="@string/export_gpx">
            </item>
            <item
                android:id="@+id/menu_export_fieldnotes"
                android:title="@string/export_fieldnotes">
            </item>
            <item
                android:id="@+id/menu_export_persnotes"
                android:title="@string/export_persnotes">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_edit_fieldnote"
        android:icon="@drawable/ic_menu_rotate"
        android:title="@string/cache_personal_note"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menu_toggleWaypointsFromNote"
        android:title="@string/cache_menu_preventWaypointsFromNote"
        app:showAsAction="ifRoom"
        android:visible="true">
    </item>
</menu>
