<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_load_individual_route"
        android:title="@string/map_load_individual_route">
    </item>
    <item
        android:id="@+id/menu_autotarget_individual_route"
        android:checkable="true"
        android:title="@string/map_autotarget_individual_route"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menu_sort_individual_route"
        android:title="@string/map_sort_individual_route"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menu_center_on_route"
        android:title="@string/center_on_route"
        android:visible="false" />
    <item
        android:id="@+id/menu_export_individual_route"
        android:title="@string/map_export_individual_route"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menu_export_individual_route_as_track"
        android:title="@string/map_export_individual_route_as_track"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menu_clear_individual_route"
        android:title="@string/map_clear_individual_route"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menu_clear_targets"
        android:title="@string/map_clear_manual_targets"
        android:visible="false">
    </item>
</menu>
