<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_toggle_mypos"
        android:icon="@drawable/ic_menu_myposition"
        android:showAsAction="always"
        android:title="@string/menu_centerposition"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_select_mapview"
        android:icon="@drawable/ic_action_layers"
        android:showAsAction="ifRoom"
        android:title="@string/map_view_map"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:orderInCategory="1"
                android:id="@+id/menu_group_map_sources_online"
                android:checkableBehavior="single">
            </group>
            <group
                android:orderInCategory="2"
                android:id="@+id/menu_group_map_sources_offline"
                android:checkableBehavior="single" >
            </group>
            <item
                android:orderInCategory="0"
                android:id="@+id/menu_map_appearance"
                android:icon="@drawable/downloader_theme"
                app:iconTint="@color/colorText"
                android:title="@string/map_appearance">
                <menu>
                    <item
                        android:id="@+id/menu_theme_mode"
                        android:icon="@drawable/downloader_theme"
                        app:iconTint="@color/colorText"
                        android:title="@string/map_theme_select">
                    </item>
                    <item
                        android:id="@+id/menu_theme_options"
                        android:icon="@drawable/ic_menu_preferences"
                        app:iconTint="@color/colorText"
                        android:title="@string/map_theme_options">
                    </item>
                    <item
                        android:id="@+id/menu_hillshading"
                        android:title="@string/settings_hillshading_enable"
                        android:icon="@drawable/ic_menu_hills"
                        app:iconTint="@color/colorText"
                        android:checkable="true"
                        android:visible="false" />
                    <item
                        android:id="@+id/menu_select_language"
                        android:title="@string/map_language"
                        android:icon="@drawable/ic_menu_translate"
                        app:iconTint="@color/colorText"
                        android:visible="false"
                        app:showAsAction="ifRoom">
                        <menu>
                            <group
                                android:id="@+id/menu_group_map_languages"
                                android:checkableBehavior="single" >
                            </group>
                        </menu>
                    </item>
                </menu>
            </item>
            <item
                android:orderInCategory="91"
                android:id="@+id/menu_manage_offline_maps"
                android:icon="@drawable/ic_menu_download"
                app:iconTint="@color/colorText"
                android:title="@string/map_manage_offline_data">
                <menu>
                    <item
                        android:id="@+id/menu_download_offlinemap"
                        android:title="@string/downloadmap_title"
                        android:icon="@drawable/ic_menu_mapmode"
                        app:iconTint="@color/colorText" />
                    <item
                        android:id="@+id/menu_check_routingdata"
                        android:icon="@drawable/ic_menu_route"
                        app:iconTint="@color/colorText"
                        android:title="@string/check_tiles_menu" />
                    <item
                        android:id="@+id/menu_check_hillshadingdata"
                        android:icon="@drawable/ic_menu_hills"
                        android:title="@string/check_hillshading_tiles_menu"
                        app:iconTint="@color/colorText" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_menu_filter"
        android:showAsAction="ifRoom"
        android:title="@string/search_filter"
        android:visible="true"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_map_live"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/map_live_disable"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_hint"
        android:icon="@drawable/ic_menu_hint"
        android:title="@string/cache_hint"
        android:visible="false"
        app:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/menu_compass"
        android:icon="@drawable/ic_menu_compass"
        android:title="@string/compass_title"
        android:visible="false"
        app:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/menu_log_visit_offline"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/cache_menu_visit_offline"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_log_visit"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/cache_menu_visit"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_store_caches"
        android:icon="@drawable/ic_menu_save"
        android:showAsAction="ifRoom|withText"
        android:title="@string/caches_store_offline_map"
        app:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/menu_map_rotation"
        android:title="@string/map_rotation"
        android:visible="false"
        app:showAsAction="ifRoom|withText">
        <menu>
            <group
                android:id="@+id/menu_group_map_rotation"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_map_rotation_off"
                    android:title="@string/switch_off" />
                <item
                    android:id="@+id/menu_map_rotation_manual"
                    android:title="@string/switch_manual" />
                <item
                    android:id="@+id/menu_map_rotation_auto_lowpower"
                    android:title="@string/switch_auto_lowpower" />
                <item
                    android:id="@+id/menu_map_rotation_auto_precise"
                    android:title="@string/switch_auto_precise"
                    android:visible="false"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_trailhistory"
        android:title="@string/trailhistory">
        <menu>
            <item
                android:id="@+id/menu_trail_show"
                android:title="@string/map_trail_show">
            </item>
            <item
                android:id="@+id/menu_trail_hide"
                android:title="@string/map_trail_hide">
            </item>
            <item
                android:id="@+id/menu_export_trailhistory"
                android:title="@string/export_trailhistory_title">
            </item>
            <item
                android:id="@+id/menu_clear_trailhistory"
                android:title="@string/map_clear_trailhistory">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_routetrack"
        android:title="@string/routes_tracks_menu" />
    <item
        android:id="@+id/menu_as_list"
        android:icon="@drawable/ic_menu_list"
        android:title="@string/map_as_list">
    </item>
</menu>
